Port to EMI
Signed-off-by: unilock <unilock@fennet.rentals>