@@ -1,4 +1,4 @@
-package me.paypur.tconjei.jei;
+package me.paypur.tconjei.xplat;
 
 import net.minecraft.world.item.ItemStack;
 import slimeknights.tconstruct.library.materials.MaterialRegistry;
@@ -14,15 +14,17 @@ import slimeknights.tconstruct.library.tools.part.IToolPart;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record ToolPartsWrapper(ToolDefinition definition) {
 
-    static List<Material> MATERIALS = MaterialRegistry.getMaterials()
+    public static final int WIDTH = 120, HEIGHT = 60;
+    public static final int ITEM_SIZE = 16;
+
+    private static final List<Material> MATERIALS = MaterialRegistry.getMaterials()
             .stream()
             .map(material -> (Material) material)
             .filter(material -> !material.isHidden())
-            .collect(Collectors.toList());
+            .toList();
 
     public StationSlotLayout getSlotLayout() {
         return StationSlotLayoutLoader.getInstance().get(definition.getId());
@@ -67,5 +69,31 @@ public record ToolPartsWrapper(ToolDefinition definition) {
         }
         return items;
     }
+
+    public static Point getOffsets(ToolPartsWrapper recipe) {
+        List<LayoutSlot> slots = recipe.getSlots();
+
+        int minX, maxX, minY, maxY;
+        minX = slots.get(0).getX();
+        maxX = slots.get(0).getX();
+        minY = slots.get(0).getY();
+        maxY = slots.get(0).getY();
+
+        for (int i = 1; i < slots.size(); i++) {
+            minX = Math.min(slots.get(i).getX(), minX);
+            maxX = Math.max(slots.get(i).getX(), maxX);
+            minY = Math.min(slots.get(i).getY(), minY);
+            maxY = Math.max(slots.get(i).getY(), maxY);
+        }
+
+        // centers slots vertically
+        int yOffset = (HEIGHT - (ITEM_SIZE + maxY - minY)) / 2 - minY;
+        // centers slots horizontally within square
+        int xOffset = (HEIGHT - (ITEM_SIZE + maxX - minX)) / 2 - minX;
+
+        return new Point(xOffset, yOffset);
+    }
+
+    public record Point(int x, int y) {}
 
 }
